src/objects/Historical_Customer_Status__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <label>Customer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <color>#78C953</color>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                    <color>#F3D904</color>
                    <label>Yellow</label>
                </value>
                <value>
                    <fullName>Orange</fullName>
                    <color>#E27001</color>
                    <label>Orange</label>
                </value>
                <value>
                    <fullName>Red</fullName>
                    <color>#FF0000</color>
                    <label>Red</label>
                </value>
                <value>
                    <fullName>New</fullName>
                    <color>#A845DC</color>
                    <label>New</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Execution_Time__c</fullName>
        <label>Execution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Historical Customer Status</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Historical Customer Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical Customer Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>